fix login logic and auth service, add logout, refresh methods, auth middleware

--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,10 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 
-src/main/resources/application.properties
+/src/main/resources/application.properties
+mvnw
+mvnw.cmd
+.mvn/wrapper
 
 ### STS ###
 .apt_generated
