--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -10,6 +10,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
 
-jwt.secret=your_secret
+jwt.access.secret=your_access_secret
+jwt.refresh.secret=your_refresh_secret
 jwt.access.token.expiration=your_expiration
 jwt.refresh.token.expiration=your_expiration
